syntax = "proto3";
package internal;

service Sender {
	rpc NewMessage(Message) returns (EmptyResponse) {}
}

message Message {
	string message = 1;
	string receiverVersion = 2;
}

message EmptyResponse {}